--- a/templates/ddash/template_bi_id.j2
+++ b/templates/ddash/template_bi_id.j2
@@ -1,21 +1,22 @@
 {
   "current": {
-    "text": "{{mo_id}}",
-    "value": "{{mo_id}}"
+    "selected": true,
+    "text": "{{bi_id}}",
+    "value": "{{bi_id}}"
   },
   "datasource": null,
   "hide": 2,
   "includeAll": false,
   "multi": false,
-  "name": "device_id",
+  "name": "bi_id",
   "options": [
     {
       "selected": true,
-      "text": "{{mo_id}}",
-      "value": "{{mo_id}}"
+      "text": "{{bi_id}}",
+      "value": "{{bi_id}}"
     }
   ],
-  "query": "{{mo_id}}",
+  "query": "{{bi_id}}",
   "refresh": 0,
   "type": "constant"
 }
