--- a/templates/ddash/template_port.j2
+++ b/templates/ddash/template_port.j2
@@ -12,9 +12,9 @@
   "current": {
     "selected": true,
     "tags": [],
-    "text": "{{port_name}}",
+    "text": "All",
     "value": [
-      "{{port_name}}"
+      "$__all"
      ]
   },
   "datasource": null,
