--- a/ansible/roles/clickhouse/templates/users.xml
+++ b/ansible/roles/clickhouse/templates/users.xml
@@ -22,7 +22,8 @@
 	<users>
 		<!-- If user name was not specified, 'default' user is used. -->
 		<default>
-			<password_sha256_hex>{{ clickhouse_password }}</password_sha256_hex>
+			<!-- <password_sha256_hex>{{ clickhouse_password }}</password_sha256_hex> -->
+            <password></password>
 			<networks incl="networks" replace="replace">
 				<ip>::/0</ip>
 			</networks>
