--- a/templates/ddash/graph_rtt.j2
+++ b/templates/ddash/graph_rtt.j2
@@ -39,7 +39,7 @@
       "dateLoading": false,
       "datetimeLoading": false,
       "dateColDataType": "date",
-      "dateTimeColDataType": "ts",
+      "dateTimeColDataType": "ts"
     }
   ],
   "yaxes": [
