--- a/templates/ddash/graph_interface_load_lag.j2
+++ b/templates/ddash/graph_interface_load_lag.j2
@@ -48,9 +48,8 @@
   {%for port in interface.ports %}
   {{ comma() }}
       {
-      "formattedQuery": "SELECT $timeSeries as t, avg(load_in) as `Input {{ port }}`,  avg(load_out) as `Output {{ port }}` FROM $table PREWHERE managed_object = $bi_id WHERE path[4]='{{port}}' and $timeFilter GROUP BY t ORDER BY t",
       "intervalFactor": 1,
-      "query": "SELECT $timeSeries as t, avg(load_in) as `Input {{ port }}`,  avg(load_out) as `Output {{ port }}` FROM $table PREWHERE managed_object = $bi_id WHERE path[4]='{{port}}' and $timeFilter GROUP BY t ORDER BY t",
+      "query": "SELECT $timeSeries as t, avg(load_in) as `Input {{ port }}`,  avg(load_out) as `Output {{ port }}` FROM $table PREWHERE managed_object = $bi_id WHERE path[4]=toString({{port}}) and $timeFilter GROUP BY t ORDER BY t",
       "refId": "A",
       "resultFormat": "time_series",
       "database": "noc",
