--- a/templates/ddash/graph_interface_discards.j2
+++ b/templates/ddash/graph_interface_discards.j2
@@ -1,4 +1,4 @@
-{% macro discards(interface, device, id) -%}
+{% macro discards(interface, bi_id, device, id) -%}
 
 {
   "cacheTimeout": null,
@@ -59,52 +59,17 @@
   },
   "targets": [
     {
-      "dsType": "influxdb",
-      "groupBy": [
-        {
-          "params": [
-            "$interval"
-          ],
-          "type": "time"
-        },
-        {
-          "params": [
-            "null"
-          ],
-          "type": "fill"
-        }
-      ],
-      "measurement": "Interface | Discards | Out",
-      "policy": "default",
       "refId": "A",
       "resultFormat": "time_series",
-      "select": [
-        [
-          {
-            "params": [
-              "value"
-            ],
-            "type": "field"
-          },
-          {
-            "params": [],
-            "type": "mean"
-          }
-        ]
-      ],
-      "tags": [
-        {
-          "key": "object",
-          "operator": "=~",
-          "value": "/^{{device}}$/"
-        },
-        {
-          "condition": "AND",
-          "key": "interface",
-          "operator": "=~",
-          "value": "/^{{interface}}$/"
-        }
-      ]
+      "intervalFactor": 1,
+      "query": "SELECT $timeSeries as t, avg(discards_out) FROM $table WHERE managed_object ={{bi_id}} and path[4]=toString('{{interface}}') and $timeFilter GROUP BY t ORDER BY t",
+      "database": "noc",
+      "tableLoading": false,
+      "table": "interface",
+      "dateLoading": false,
+      "datetimeLoading": false,
+      "dateColDataType": "date",
+      "dateTimeColDataType": "ts"
     }
   ],
   "thresholds": "",
