--- a/templates/ddash/row_errors.j2
+++ b/templates/ddash/row_errors.j2
@@ -45,7 +45,7 @@
           "dateTimeColDataType": "ts",
           "datetimeLoading": false,
           "intervalFactor": 1,
-          "query": "SELECT \n\tt, \n\tgroupArray((concat('Discars ',path[4]), d)) AS groupArr\nFROM \n\t( SELECT \n\t\t(intDiv(toUInt32(ts), 300) * 300) * 1000 as t, \n\t\tpath[4], \n\t\tavg(discards_out) d \n\t\tfrom noc.interface \n\t\tWHERE \n\t\t\t$timeFilter\n\t\t\tAND  managed_object= $bi_id \n\t\tGROUP BY t, path\n\t\thaving d > 0\n\t\tORDER BY t\n\t) \nGROUP BY t \nORDER BY t",
+          "query": "SELECT \n\tt, \n\tgroupArray((concat('Discars ',path[4]), d)) AS groupArr\nFROM \n\t( SELECT \n\t\t$timeSeries t, \n\t\tpath[4], \n\t\tavg(discards_out) d \n\t\tfrom noc.interface \n\t\tWHERE \n\t\t\t$timeFilter\n\t\t\tAND  managed_object= $bi_id \n\t\tGROUP BY t, path\n\t\thaving d > 0\n\t\tORDER BY t\n\t) \nGROUP BY t \nORDER BY t",
           "refId": "A",
           "resultFormat": "time_series",
           "table": "interface",
@@ -59,7 +59,7 @@
           "datetimeLoading": false,
           "hide": false,
           "intervalFactor": 1,
-          "query": "SELECT \n\tt, \n\tgroupArray((concat('Errors ',path[4]), d)) AS groupArr\nFROM \n\t( SELECT \n\t\t(intDiv(toUInt32(ts), 300) * 300) * 1000 as t, \n\t\tpath[4], \n\t\tavg(errors_in) d \n\t\tfrom noc.interface \n\t\tWHERE \n\t\t\t$timeFilter\n\t\t\tAND  managed_object= $bi_id \n\t\tGROUP BY t, path\n\t\thaving d > 0\n\t\tORDER BY t\n\t) \nGROUP BY t \nORDER BY t",
+          "query": "SELECT \n\tt, \n\tgroupArray((concat('Errors ',path[4]), d)) AS groupArr\nFROM \n\t$timeSeries as t, \n\t\tpath[4], \n\t\tavg(errors_in) d \n\t\tfrom noc.interface \n\t\tWHERE \n\t\t\t$timeFilter\n\t\t\tAND  managed_object= $bi_id \n\t\tGROUP BY t, path\n\t\thaving d > 0\n\t\tORDER BY t\n\t) \nGROUP BY t \nORDER BY t",
           "refId": "B",
           "resultFormat": "time_series",
           "table": "interface",
