make logging driver for mongodb configurable via tower
--HG--
branch : feature/microservices

--- a/ansible/roles/mongod/templates/mongod.conf.j2
+++ b/ansible/roles/mongod/templates/mongod.conf.j2
@@ -12,9 +12,13 @@ storage:
 
 systemLog:
   verbosity: 0
+{% if mongo_logging_driver == "syslog" %}
+  destination: syslog
+{% else %}
   destination: file
   logAppend: true
   path: {{ mongo_log_path }}
+{% endif %}
 
 net:
   port: 27017
