--- a/ansible/roles/consul-template/templates/consul-template.bsdinit.j2
+++ b/ansible/roles/consul-template/templates/consul-template.bsdinit.j2
@@ -13,17 +13,16 @@ load_rc_config $name
 : "${consul_template_enable="NO"}"
 : "${consul_template_users="{{ consul_user }}"}"
 
-consul_template_pidfile="/var/run/consul/consul-template.pid"
+
+pidfile="/var/run/consul/consul-template.pid"
 command="{{ consul_template_bin_path }}/consul-template"
-command_args="-config {{consul_template_config_dir}}/ -pid-file=${consul_template_pidfile} -dedup -kill-signal=SIGTERM &"
+command_args="-config {{consul_template_config_dir}}/ -pid-file=${pidfile} -dedup -kill-signal=SIGTERM &"
 start_precmd="${name}_prestart"
 extra_commands="reload"
 
 consul_template_prestart()
 {
-    if [ ! -d /var/run/consul/ ]; then
-        mkdir /var/run/consul
-    fi
+    install -d /var/run/consul
     chown -R "{{ consul_user }}:{{ consul_group }}" /var/run/consul/
 }
 
