--- a/ansible/roles/consul/templates/consul_bsdinit.j2
+++ b/ansible/roles/consul/templates/consul_bsdinit.j2
@@ -17,15 +17,14 @@ restart_cmd=consul_restart
 start_cmd=consul_start
 stop_cmd=consul_stop
 extra_commands="reload"
+pidfile="/var/run/consul/consul.pid"
 
 consul_start() {
     echo "Starting ${name}."
     for user in ${consul_users}; do
-        if [ ! -d /var/run/consul/ ]; then
-            mkdir /var/run/consul
-        fi
+        install -d /var/run/consul
         chown -R "${user}:{{ consul_group }}" /var/run/consul/
-        su -m "${user}" -c "{{ consul_bin_path }}/consul agent -config-file={{ consul_config_path }}/config.json -config-dir={{ consul_configd_path }} -pid-file=/var/run/consul/consul.pid&"
+        su -m "${user}" -c "{{ consul_bin_path }}/consul agent -config-file={{ consul_config_path }}/config.json -config-dir={{ consul_configd_path }} -pid-file=${pidfile} &"
     done
 }
 
