--- a/ansible/roles/memcached/templates/etc/telegraf/telegraf.d/memcached.conf.j2
+++ b/ansible/roles/memcached/templates/etc/telegraf/telegraf.d/memcached.conf.j2
@@ -5,5 +5,5 @@ pattern = "memcached"
 [[inputs.memcached]]
 ## An array of address to gather stats about. Specify an ip on hostname
 ## with optional port. ie localhost, 10.0.0.1:11211, etc.
-servers = ["{{memcache_address}}"]
+servers = ["127.0.0.1:11211"]
 # unix_sockets = ["/var/run/memcached.sock"]
