fix nsqadmin. mention which system manage config
--HG--
branch : feature/microservices

--- a/ansible/roles/consul-template/templates/services/noc_bi.conf.j2
+++ b/ansible/roles/consul-template/templates/services/noc_bi.conf.j2
@@ -1,3 +1,4 @@
+# {{ ansible_managed }}
 template {
   source = "{{ consul_template_templates_dir }}/noc_bi.ctmpl"
   destination = "{{ telegraf_confd_path }}/noc-bi.conf"
