--- a/ansible/roles/consul-template/templates/services/nsqadmin.conf.j2
+++ b/ansible/roles/consul-template/templates/services/nsqadmin.conf.j2
@@ -1,3 +1,4 @@
+# {{ ansible_managed }}
 template {
   source = "{{ consul_template_templates_dir }}/nsqadmin.conf.ctmpl"
   destination = "{{nsqd_config_dir}}/nsqadmin.conf"
