--- a/ansible/roles/consul-template/templates/services/upstream.conf.j2
+++ b/ansible/roles/consul-template/templates/services/upstream.conf.j2
@@ -1,3 +1,4 @@
+# {{ ansible_managed }}
 template {
   source = "{{ consul_template_templates_dir }}/upstream.conf.ctmpl"
   destination = "{{nginx_conf_upstream_path}}"
