--- a/ansible/roles/consul-template/templates/services/noc_web.conf.j2
+++ b/ansible/roles/consul-template/templates/services/noc_web.conf.j2
@@ -1,3 +1,4 @@
+# {{ ansible_managed }}
 template {
   source = "{{ consul_template_templates_dir }}/noc_web.ctmpl"
   destination = "{{ telegraf_confd_path }}/noc-web.conf"
