--- a/services/card/templates/alarm.html.j2
+++ b/services/card/templates/alarm.html.j2
@@ -101,6 +101,7 @@
                         <th>{{ _("Services") }}</th>
                         <th>{{ _("Duration") }}</th>
                         <th>{{ _("Object") }}</th>
+                        <th>{{ _("IP") }}</th>
                         <th>{{ _("Class") }}</th>
                         <th>{{ _("Subject") }}</th>
                     </tr>
@@ -117,6 +118,7 @@
                         </td>
                         <td>{{ a.display_duration }}</td>
                         <td><a href="/api/card/view/managedobject/{{ a.managed_object.id }}/">{{ a.managed_object | managed_object_title }}</a></td>
+                        <td><a href="/api/card/view/managedobject/{{ a.managed_object.id }}/">{{ a.managed_object.address }}</a></td>
                         <td>{{ a.alarm_class.name }}</td>
                         <td>{{ a.subject }}</td>
                     </th>
