--- a/ansible/roles/haproxy/templates/haproxy.conf.j2
+++ b/ansible/roles/haproxy/templates/haproxy.conf.j2
@@ -12,7 +12,7 @@ defaults
     timeout server 30m
     timeout check 5s
 
-{% if groups["svc-patroni"] | length > 0   %}
+{% if 'svc-patroni' in groups and groups["svc-patroni"] | length > 0   %}
 
 frontend ft_postgresql
     bind *:{{haproxy_patroni_listen}}
