limit connections from pgbouncer to postgres
--HG--
branch : feature/microservices

--- a/ansible/roles/pgbouncer/templates/etc/pgbouncer/pgbouncer.ini.j2
+++ b/ansible/roles/pgbouncer/templates/etc/pgbouncer/pgbouncer.ini.j2
@@ -111,7 +111,7 @@ default_pool_size = 20
 ;reserve_pool_timeout = 3
 
 ; how many total connections to a single database to allow from all pools
-; max_db_connections = {{pgbouncer_max_db_connection}}
+max_db_connections = {{pgbouncer_max_db_connection}}
 ;max_user_connections = 50
 
 ; If off, then server connections are reused in LIFO manner
