--- a/ansible/roles/clickhouse/templates/users.xml
+++ b/ansible/roles/clickhouse/templates/users.xml
@@ -66,6 +66,7 @@
             {% for n in groups['svc-bi'] %}
                 <ip>{{hostvars[n].ansible_host}}</ip>
             {% endfor %}
+                <ip>{{tower_ip}}</ip>
 			</networks>
 			<profile>readonly</profile>
 			<quota>default</quota>
