fix memory usage template
--HG--
branch : feature/microservices

--- a/templates/ddash/graph_memory_usage.j2
+++ b/templates/ddash/graph_memory_usage.j2
@@ -47,7 +47,7 @@
       "policy": "default",
       "query": "SELECT $timeSeries as t, avg(usage) `Memory | Usage` FROM $table WHERE managed_object=$bi_id and $timeFilter GROUP BY t ORDER BY t",
       "refId": "A",
-      "resultFormat": "time_series",
+      "resultFormat": "time_series"
     }
   ],
   "timeFrom": null,
