--- a/ansible/roles/nginx/templates/etc/telegraf/telegraf.d/fm-monitor.conf.j2
+++ b/ansible/roles/nginx/templates/etc/telegraf/telegraf.d/fm-monitor.conf.j2
@@ -10,7 +10,7 @@
   response_timeout = "15s"
 
   [inputs.httpjson.headers]
-    Authorization = "Basic YWRtaW46YWRtaW4K" # admin:admin
+    Authorization = "Basic YWRtaW46YWRtaW4=" # admin:admin
 
 ##
 ## NOC users!
