--- a/ansible/roles/nginx/templates/etc/telegraf/telegraf.d/fm-monitor.conf.j2
+++ b/ansible/roles/nginx/templates/etc/telegraf/telegraf.d/fm-monitor.conf.j2
@@ -6,7 +6,8 @@
   ]
   method = "GET"
 
-  insecure_skip_verify = false
+  insecure_skip_verify = {% if nginx_self_signed_cerificate %}true{% else %}false{% endif %}
+
   response_timeout = "15s"
 
   [inputs.httpjson.headers]
